feat: implement mail detail
